<resources>
    <string name="app_name">小可爱影视</string>
    <string name="register">注册</string>
    <string name="account_login_title">登录</string>
    <string name="ai_account_forget_password">忘记密码</string>
    <string name="account_login_account_hint">请输入手机号</string>
    <string name="account_login_password_hint">请输入密码</string>
    <string name="ai_account_login_now">立即登录</string>
    <string name="account_sign_by_phone">手机注册</string>
    <string name="account_login">登录</string>
    <string name="account_phone_hint">请输入手机号</string>
    <string name="account_verification_code_hint">请输入验证码</string>
    <string name="account_send_verification_code">获取手机号</string>
    <string name="account_password_confirm">请确认密码</string>
    <string name="ai_account_sign_up">立即注册</string>
    <string name="account_password_hint">请输入密码</string>
    <string name="account_password_new_hint">请输入新密码</string>
    <string name="account_password_new_confirm">请确认新密码</string>
    <string name="account_forget_success">完成</string>
</resources>
