<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_frame_background_color"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/offset_32dp"
        android:paddingRight="@dimen/offset_32dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/offset_10dp">

                <com.vipvideo.view.ClearEditText
                    android:id="@+id/edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/account_phone_hint"
                    android:inputType="number|numberSigned|numberDecimal|numberPassword|phone"
                    android:maxLines="1"
                    android:textColor="@color/edit_text_color"
                    android:textColorHint="@color/edit_text_hint_color"
                    android:textSize="16sp" />
            </android.support.constraint.ConstraintLayout>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toTopOf="@+id/text_input_phone">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/offset_10dp">

                <carbon.widget.EditText
                    android:id="@+id/edit_verification_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="true"
                    android:hint="@string/account_verification_code_hint"
                    android:inputType="number|numberSigned|numberDecimal|numberPassword|phone"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:textColor="@color/edit_text_color"
                    android:textColorHint="@color/edit_text_hint_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_send_verification_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/offset_12dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/account_send_verification_code"
                    android:textColor="@color/verification_code_selector"
                    android:textSize="16sp"
                    app:layout_constraintRight_toRightOf="@id/edit_verification_code"
                    app:layout_constraintBottom_toBottomOf="@+id/edit_verification_code"
                    app:layout_constraintTop_toTopOf="@+id/edit_verification_code" />

            </android.support.constraint.ConstraintLayout>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toTopOf="@id/text_input_verification_code">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/offset_10dp">

                <com.vipvideo.view.ClearEditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="true"
                    android:hint="@string/account_password_new_hint"
                    android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone"
                    android:maxLength="32"
                    android:maxLines="1"
                    android:paddingRight="50dp"
                    android:textColor="@color/edit_text_color"
                    android:textColorHint="@color/edit_text_hint_color"
                    android:textSize="16sp" />

            </android.support.constraint.ConstraintLayout>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toTopOf="@+id/text_input_password">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/offset_10dp">

                <com.vipvideo.view.ClearEditText
                    android:id="@+id/edit_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="true"
                    android:hint="@string/account_password_new_confirm"
                    android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone"
                    android:maxLength="32"
                    android:maxLines="1"
                    android:paddingRight="50dp"
                    android:textColor="@color/edit_text_color"
                    android:textColorHint="@color/edit_text_hint_color"
                    android:textSize="16sp" />

            </android.support.constraint.ConstraintLayout>
        </android.support.design.widget.TextInputLayout>


        <carbon.widget.Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50"
            android:layout_marginTop="120dp"
            android:background="@drawable/login_button_selector"
            android:enabled="false"
            android:text="@string/account_forget_success"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:carbon_cornerRadius="50dp"
            app:layout_constraintTop_toTopOf="@+id/text_input_password_confirm" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>